# master-thesis

./: .cmake.sh  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  _config.yml  blog.md  index.md  main.cpp  presentation.bcf  presentation.bib  presentation.run.xml  presentation.tex  refs.md
Data/: gnuplot.gnu  test.gnu
Doc/: CMakeLists.txt  Doxyfile  bibliographie.bib  footer.html  header.html  index.md
Moduls/: CMakeParseArguments.cmake  FindOpenCL.cmake  FindOpenMP.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake
Tests/: CMakeLists.txt  benchmark.cpp  global_fixture.h  main_test.cpp  test.m  test_default.hpp  test_laplace2d.cpp  test_laplace3d.cpp  test_laplace3d.hpp  test_main.cpp
Tools/Valgrind/: master-thesis.supp
_drafts/: 2017-10-09-gca-part-3.md  gca-part-1.md  h2-matrices.md  h2-mvm.md  results-farfiled.md
_layouts/: blog.html  default.html  home.html  post.html
_posts/: 2017-03-13-lets-get-started.md  2017-03-30-lets-get-started.md  2017-20-07-gca-part-1.md  2017-22-05-h2-matrices.md  2017-23-08-adaptive-cross-approximation.md  2017-23-9-adaptive-cross-approximation.md  2017-24-08-gca-part-2.md  2017-27-08-results-farfiled.md  2017-27-09-results-farfiled.md
_sass/: master-thesis.scss
assets/css/: style.scss
assets/graphs/: farfield-memory.gnu  farfield-performance.gnu  h2-matrix-memory.gnu  log_1048576  log_131072  log_16384  log_262144  log_32768  log_524288  log_65536  memory.csv  performance.csv
data/: gnuplot.gnu  memory-galerkin-h2.csv  memory-galerkin.csv  memory-h2-ff-nf.csv  performance-feval-1-3.csv  performance-feval-1-4.csv  performance-ff.csv  performance-h2-gca.csv
doc/: annotated.html  classes.html  dir_5ad7f572bbca03234e8e621e192fc099.html  dir_b98b26f3e53c0cd08476c2181c9eccf5.html  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  modules.html  pages.html
doc/d0/d01/: kernels_8h.html  kernels_8h_source.html
doc/d0/de3/: citelist.html
doc/d0/df6/: group__basic.html
doc/d1/d58/: struct__greencross.html
doc/d2/de6/: cl_2greencross_8cl.html
doc/d2/df4/: struct__clusterbasis__ocl.html
doc/d3/d30/: struct__objects.html
doc/d3/d9b/: ocl__system_8h.html  ocl__system_8h_source.html
doc/d3/db8/: group__objects.html
doc/d4/d3b/: group__clavector.html
doc/d4/d75/: struct__indexset.html
doc/d4/dbd/: group__clustergeometry.html
doc/d5/d7f/: clclustergeometry_8h.html  clclustergeometry_8h_source.html
doc/d5/d84/: group__clusterbasis.html
doc/d5/dae/: cl_2clamatrix_8cl.html
doc/d5/dd0/: struct__avector.html
doc/d6/dbf/: group__greencross.html
doc/d7/d73/: kernels_8c.html
doc/d7/dec/: greencross_8c.html
doc/d8/d11/: clbasic_8cl.html
doc/d8/d21/: clusterbasisocl_8h.html  clusterbasisocl_8h_source.html
doc/d8/d31/: struct__amatrix__ocl.html
doc/d8/de6/: group__ie1d.html
doc/d9/d00/: ie1d_8c.html
doc/d9/d64/: group__ocl__system.html
doc/da/d29/: group__clamatrix.html
doc/da/d2d/: clavector_8cl.html
doc/da/dd4/: cl_2clbasic_8cl.html
doc/db/d26/: ocl__system_8c.html
doc/db/d45/: struct__ie1d.html
doc/db/d97/: clamatrix_8cl.html
doc/dc/dfb/: struct__greencross__ocl.html
doc/dd/d40/: amatrixocl_8h.html  amatrixocl_8h_source.html
doc/dd/d6c/: struct__amatrix.html
doc/dd/da0/: ie1d_8h.html  ie1d_8h_source.html
doc/de/d17/: greencross_8h.html  greencross_8h_source.html
doc/de/d6e/: group__avector.html
doc/de/d8e/: group__kernels.html
doc/de/d96/: cl_2clavector_8cl.html
doc/de/dfb/: group__amatrix.html
doc/df/d64/: group__indexset.html
doc/df/d7c/: group__clbasic.html
doc/df/d91/: objects_8h.html  objects_8h_source.html
doc/df/dcf/: index_8md.html
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  groups_0.js  groups_1.js  (+23 more)
figures/: ff-add-interim-result.graphml  ff-compute-matrix-entry.graphml  ff-initial-situation.graphml  ff-multiply-vector.graphml  ff-next-column.graphml  ff-write-result.graphml  nf-quad-points-div.graphml  nf-quad-points.graphml
graphxml/: h2-leaf-matrices.graphml  h2-matrix-1.graphml  h2-matrix-2.graphml  h2-matrix-3.graphml  h2-matrix-4.graphml  h2-matrix-5.graphml  h2-matrix-6.graphml  h2-matrix-block-labled.graphml  h2-matrix-block-orderd.graphml  h2-matrix-block.graphml  h2-near-far-field-matrices.graphml  h2-transfer-matrices.graphml  nf-quad-points.graphml  opencl-work-group.graphml  opencl-write-result.graphml
